# garden-planner

./: .gitignore  LICENSE  README.md  repository.yaml
.github/workflows/: build.yaml  lint.yaml
ha-addon/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  config.yaml
ha-addon/rootfs/etc/services.d/garden-planner/: finish  run
ha-addon/translations/: en.yaml
mcp-server/: Dockerfile  alembic.ini  pyproject.toml
mcp-server/alembic/: env.py
mcp-server/alembic/versions/: d3595f67e366_initial_schema.py
mcp-server/garden_planner/: db.py  models.py  queries.py  server.py
mcp-server/tests/: test_migrations.py  test_queries.py  test_server.py
