[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "garden-planner"
version = "0.1.0"
description = "A local-first garden journal MCP server"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "sqlmodel>=0.0.21",
    "uvicorn[standard]>=0.30",
    "alembic>=1.13",
]

[project.scripts]
garden-planner = "garden_planner.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["garden_planner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
